--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
     <div id="container"> <!-- Início do container-->
         <div id="topo"> <!--Início do topo-->
             <div id="area-logo"> <!-- Início da área logo-->
-                <h1>
+                <h1 class="logo">
                     <a href="">Chalé Hotel</a>
                 </h1>
             </div> <!-- Fim da área logo-->
             <div id="area-menu"> <!-- Início da área menu-->
-                Menu
+                <div id="conteudo-menu">
+                    <div id="menu-locais">
+                        <span class="locais">
+                            Rio de Janeiro - São Paulo - Belo Horizonte 
+                        </span>
+                        <a class="reserva" href="">Reservar</a>
+                        <div style="clear: both;"></div>
+                    </div>
+                </div>
             </div> <!-- Fim da área logo-->
         </div> <!--Fim do topo-->
     </div> <!-- Fim do container-->
