Área de conteúdos

--- a/index.html
+++ b/index.html
@@ -49,6 +49,34 @@
                 </div>
             </div> <!-- Fim da área logo-->
         </div> <!--Fim do topo-->
+
+        <div id="area-principal"> <!-- Início da área principal-->
+            <div class="conteudo">
+                <h2>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                </h2>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa nesciunt porro quia, laborum consequuntur aliquid. Corrupti, libero. Ipsum porro vitae optio a! Corrupti voluptates voluptatibus omnis praesentium, quasi sit nihil.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, cupiditate odio delectus fugit, molestias, mollitia incidunt vitae rem laborum magnam animi ipsam amet cum quas facere quae dicta dolor iure.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio harum expedita tempora quo culpa optio laborum alias? Ut laboriosam doloremque dolorem earum repellat ducimus suscipit ipsa mollitia esse. Repudiandae, nihil.</p>
+            </div>
+        </div> <!--Fim da área principal-->
+
+        <div id="area-lateral"> <!-- Início da área lateral-->
+            <div class="conteudo">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+            </div>
+        </div> <!--Fim da área lateral-->
+
+        <div id="rodape">
+
+        </div>
     </div> <!-- Fim do container-->
 </body>
 </html>
