--- a/index.html
+++ b/index.html
@@ -68,14 +68,38 @@
 
         <div id="area-lateral"> <!-- Início da área lateral-->
             <div class="conteudo">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
+                <ul id="beneficios">
+                    <li>
+                        <a href="">
+                            <img src="imagens/apartamento.jpg" width="150px" alt="Apartamento">
+                            <h3>Apartamento</h3>
+                            <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <img src="imagens/restaurante.jpg" width="150px" alt="Restaurante">
+                            <h3>Restaurante</h3>
+                            <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <img src="imagens/piscina.jpg" width="150px" alt="Piscina">
+                            <h3>Piscina</h3>
+                            <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div> <!--Fim da área lateral-->
 
         <div id="rodape">
-
+            <span>
+                &copy; Copyright 2000-2022 Chalé Hotel 
+            </span>
         </div>
     </div> <!-- Fim do container-->
 </body>
